data/derived/comb/progs/unify/prog8119.ml.out
Characters 27-30:
  let _ = fixpoint (collatz, 107);;
                             ^^^
Error: This expression has type int but an expression was expected of type
         bool
